fixed bug with roles